--- a/src/Components.scss
+++ b/src/Components.scss
@@ -1,6 +1,7 @@
 $success: #32a852;
 $danger: #ef4f5f;
 $primary: #263e58;
+$primary-tilt: #263e58cc;
 $secondary: #f1f2f7;
 $text-color: #121212;
 $hover-background-color: #263e581a;
@@ -44,13 +45,13 @@ $transparent-back: #1a263194;
 @mixin ToolkitCard($width: 300px, $height: 100%) {
   @include flex(center, flex-start);
   @include flexDirection(column);
-  border-radius: 10px;
-  min-width: $width;
+  border-radius: 16px;
+  width: $width;
   height: $height;
-  padding: 1.947rem;
-  max-width: 25vw;
+  padding: 1.5rem;
   background-color: #fff;
   overflow-x: hidden;
+  border: 0.15rem solid $secondary;
 }
 
 @mixin ToolkitBackDrop {
